syntax = "proto3";

package ampb;

import "ampb/anime_movie.proto";
import "ampb/tag.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieTagRequest {
    int64 animeID = 1;
    repeated string animeTags = 2;
}

message CreateAnimeMovieTagResponse {
    AnimeMovieResponse animeMovie = 1;
    repeated AnimeMovieTag animeTags = 2;
}